--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,6 +34,39 @@ html {
     padding-left: 2rem;
 }
 
+.button-icon {
+    border: transparent;
+    background: transparent;
+}
+
+.whatsapp-button {
+    position: fixed;    
+    right: 15px;
+    bottom: 12px;
+    width: 60px;
+    height: 60px;
+    border: transparent;
+    background: rgb(15, 207, 15);
+    border-radius: 100%;
+    font-size: 5rem;
+    color: white;
+    cursor: pointer;
+    text-align: center;
+    animation: scaleButton 1s infinite;
+}
+
+@keyframes scaleButton {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
 /* Leafs */
 .leaf1 {
     position: absolute;
@@ -383,6 +416,7 @@ html {
 #depositions {
     padding: 5rem;
     background: var(--tertiary-color);
+    min-height: 500px;
 }
 
 .depositions-title {
@@ -448,6 +482,15 @@ html {
 
 /* Slides Style */
 
+.hidden {
+    display: none;
+}
+
+.texts-html {
+  display: none;
+  position: absolute;
+}
+
 .radio-items {
     width: 100%;
     height: 7%;
@@ -482,4 +525,205 @@ html {
 .fa-star {
     font-size: 1.6rem;
     color: yellow;
+}
+
+/* Form */
+
+.container-3 {
+    background-image: linear-gradient(to right, rgba(112, 64, 46, 0.808), rgba(175, 115, 93, 0.719)), url(../Assets/form-wallpaper.jpg);
+    background-size: cover;
+    text-align: center;
+    padding: 0 auto;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+}
+
+.form-text {
+    padding-top: 1rem;
+    font-size: 3rem;
+    font-weight: 600;
+    text-transform: capitalize;
+    color: white;
+}
+
+.form-underline {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 4rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-weight: 400;
+    padding-bottom: 4rem;
+    color: white;
+}
+
+.form {
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: #ffffff;
+    padding-bottom: 2rem;
+    letter-spacing: .10rem;
+}
+
+.form form input {
+    width: 60%;
+    height: 3rem;
+    padding: .4rem;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.form-button {
+    width: 60%;
+    height: 4rem;
+    background: var(--tertiary-color);
+    border: 2px solid var(--text-color-secondary);
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+@media screen and (min-width: 725px) {
+    .container-3 {
+        display: flex;
+        flex-direction: row;
+        padding-top: 2rem;
+    }
+
+    .form-texts {
+        width: 50%;
+    }
+
+    .form-text {
+        font-size: 2.8rem;
+        justify-content: center;
+        align-items: center;
+        padding-top: 6rem;
+    }
+
+    .form form input {
+        height: 3.4rem;
+    }
+
+    .form-text-2 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .form {
+        width: 50%;
+    }
+}
+
+/* Carousel */
+
+.item {
+    max-height: 45rem;
+}
+
+@media screen and (min-width: 500px) {
+    .item {
+        max-height: 50rem;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .item {
+        max-height: 20rem;
+    }
+}
+
+@media screen and (min-width: 720px) {
+    .item {
+        max-height: 23rem;
+    }
+}
+
+@media screen and (min-width: 810px) {
+    .item {
+        max-height: 25rem;
+    }
+}
+
+@media screen and (min-width: 875px) {
+    .item {
+        max-height: 29rem;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .item {
+        max-height: 24rem;
+    }
+}
+
+@media screen and (min-width: 1125px) {
+    .item {
+        max-height: 28rem;
+    }
+}
+
+@media screen and (min-width: 1310px) {
+    .item {
+        max-height: 33rem;
+    }
+}
+
+@media screen and (min-width: 1530px) {
+    .item {
+        max-height: 39rem;
+    }
+}
+
+@media screen and (min-width: 1815px) {
+    .item {
+        max-height: 47rem;
+    }
+}
+
+/* Location */
+
+.location {
+    display: flex;
+    flex-direction: column;
+    background: var(--tertiary-color);
+    align-items: center;
+    justify-content: center;
+}
+
+.location-map {
+    position: relative;
+    width: 90%;
+    height: 40rem;
+    border: 2px solid var(--primary-color);
+    border-radius: 3px;
+}
+
+.location-title {
+    color: #ffffff;
+    font-size: 7rem;
+    font-weight: 900;
+    text-align: center;
+    padding: 1rem 0;
+    font-family: 'Italianno';
+}
+
+.location-description {
+    padding: 1rem 0;
+    font-weight: 600;
+    color: white;
+    font-size: 1.8rem;
+    text-align: center;
+    line-height: 2rem;
+    text-transform: capitalize;
+    letter-spacing: .1rem;
+}
+
+@media screen and (min-width: 992px) {
+    .location-map {
+        width: 70%;
+    }
 }
